// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots LoginPage/atoms/CarouselArrow Carousel Arrow Left 1`] = `
<div
  className="sc-htpNat hwrAWy"
>
  <button
    className="sc-bwzfXH isAFZs"
    data-js-slick="left"
    onClick={[Function]}
  >
    <img
      alt="left"
      className="sc-bdVaJa kklgoN"
      src={Object {}}
    />
  </button>
</div>
`;

exports[`Storyshots LoginPage/atoms/CarouselArrow Carousel Arrow Right 1`] = `
<div
  className="sc-htpNat hwrAWy"
>
  <button
    className="sc-bwzfXH jGUSLb"
    data-js-slick="right"
    onClick={[Function]}
  >
    <img
      alt="right"
      className="sc-bdVaJa kklgoN"
      src={Object {}}
    />
  </button>
</div>
`;

exports[`Storyshots LoginPage/atoms/CarouselDot Show Tweet Button 1`] = `
<div
  className="sc-ifAKCX hprZSf"
>
  <div
    className="sc-bxivhb gGDodJ"
  />
</div>
`;

exports[`Storyshots TwApps/atoms/ShowTweetButton Show Tweet Button 1`] = `
<button
  className="sc-caSCKo jCRLSt"
  data-e2e-id="ShowTweetsButton_initial"
  onClick={[Function]}
  type="button"
>
  <div
    className="sc-gisBJw iJoGXp"
  />
  <span
    className="sc-jTzLTM izpxaH"
  >
    ツイートを
  </span>
  チラ見
</button>
`;

exports[`Storyshots TwApps/atoms/ToggleMenuButton Toggle Mute Button 1`] = `
<div
  className="sc-kAzzGY jMjvEQ"
>
  <div
    className="sc-fjdhpX dKWwgc"
  >
    <button
      className="sc-cSHVUG bhxyBA"
      data-e2e-id="ToggleMuterMenuButton_opened"
      onClick={[Function]}
    >
      <img
        alt="close"
        className="sc-jzJRlG ikrnlm menu-toggle-icon"
        src="[object Object]"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots TwApps/atoms/Tweet Tweet 1`] = `
<div
  className="sc-chPdSV bqfxdD"
>
  <p
    className="sc-kgoBCf eKLFlP"
  >
    ツイートの本文が表示されます
  </p>
  <ul
    className="sc-kGXeez fxkIlE"
  />
  <div
    className="sc-ckVGcZ bBDcYB"
  >
    <div
      className="sc-jKJlTe dPCXzM"
    >
      <div
        className="sc-hMqMXs bzaPGE"
      />
      <p
        className="sc-kEYyzF gplWHF"
      >
        10
      </p>
    </div>
    <div
      className="sc-jKJlTe dPCXzM"
    >
      <div
        className="sc-eNQAEJ gDkQlq"
      />
      <p
        className="sc-kkGfuU bMdBUi"
      >
        11
      </p>
    </div>
    <a
      className="sc-iAyFgw dBJicQ open-twitter-link"
      data-e2e-id="TwitterLink"
      href="https://twitter.com/cha_han5656"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        className="sc-hSdWYo eHhjMN twitter-icon"
      />
      <span
        className="sc-eHgmQL biXIEI pc-twitter-label"
      >
        twitterで見る
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots TwApps/atoms/UnmuteButton Mobile 1`] = `
Array [
  <h2>
    PCサイズでは何も表示されない
  </h2>,
  <button
    className="sc-cJSrbW gZlJVm"
    data-e2e-id="UnmuteButton_muted"
    onClick={[Function]}
    type="button"
  >
    <div
      className="sc-kgAjT iHVWss unmute-icon"
    />
    ミュート解除
  </button>,
]
`;

exports[`Storyshots TwApps/atoms/UnmuteButton PC 1`] = `
Array [
  <h2>
    SPサイズでは何も表示されない
  </h2>,
  <button
    className="sc-TOsTZ iLsaRe"
    data-e2e-id="UnmuteButton_unmuted"
    onClick={[Function]}
    type="button"
  >
    <div
      className="sc-kjoXOD ddgldC mute-icon"
    />
    ミュート
  </button>,
]
`;

exports[`Storyshots TwApps/molecules/FatalMessage Fatal Message 1`] = `
<div
  className="sc-cvbbAY jigcOE"
>
  <div
    className="sc-jWBwVP docuPj"
  >
    <h2
      className="sc-brqgnP djSacn"
    >
      エラーが発生しました
    </h2>
    <a
      className="sc-cMljjf dTRkEh"
      href="http://localhost:6006"
    >
      Topへ戻る
    </a>
  </div>
</div>
`;

exports[`Storyshots TwApps/molecules/FrontDisplayContainer Front Display Container 1`] = `
<div
  className="sc-jAaTju hLObMU"
  style={Object {}}
>
  <img
    alt="loading"
    className="sc-jDwBTQ gMHniA"
    src={Object {}}
  />
  <p
    className="sc-gPEVay grdSlS"
  >
    loading...
  </p>
</div>
`;

exports[`Storyshots TwApps/molecules/ListedUser Listed User 1`] = `
<li
  className="sc-gipzik kHoOKC"
  data-e2e-id="ListedUser"
  data-user="culalaTP"
>
  <div
    className="sc-ksYbfQ kSTJoF"
  >
    <img
      alt="icon"
      className="sc-Rmtcm cHQIgs"
      src="https://pbs.twimg.com/profile_images/1166011350981545990/VRiZCTi8.jpg"
    />
    <div
      className="sc-bRBYWo hitMDu"
    >
      <p
        className="sc-hzDkRC ddyDQe"
      >
        くらら太郎
      </p>
      <p
        className="sc-hzDkRC ddyDQe"
      >
        @
        culalaTP
      </p>
    </div>
    <button
      className="sc-kvZOFW lpaVtS"
      data-e2e-id="UnmuteButton_muted"
      onClick={[Function]}
      type="button"
    >
      <div
        className="sc-hmzhuo gQEyUN unmute-icon"
      />
      ミュート解除
    </button>
  </div>
  <ul
    className="sc-jlyJG cbQYIm"
    data-e2e-id="TweetList_initial"
  >
    <li
      className="sc-iRbamj blSEcj"
    >
      <div
        className="sc-chPdSV bqfxdD"
      >
        <p
          className="sc-kgoBCf eKLFlP"
        >
          私が日光アレルギー無くて男だったら絶対海軍入ってた
潜水艦乗りたかった
        </p>
        <ul
          className="sc-kGXeez fxkIlE"
        />
        <div
          className="sc-ckVGcZ bBDcYB"
        >
          <div
            className="sc-jKJlTe dPCXzM"
          >
            <div
              className="sc-hMqMXs bzaPGE"
            />
            <p
              className="sc-kEYyzF gplWHF"
            >
              2
            </p>
          </div>
          <div
            className="sc-jKJlTe dPCXzM"
          >
            <div
              className="sc-eNQAEJ gDkQlq"
            />
            <p
              className="sc-kkGfuU bMdBUi"
            >
              0
            </p>
          </div>
          <a
            className="sc-iAyFgw dBJicQ open-twitter-link"
            data-e2e-id="TwitterLink"
            href="https://twitter.com/culalaTP/status/1227046563693772801"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-hSdWYo eHhjMN twitter-icon"
            />
            <span
              className="sc-eHgmQL biXIEI pc-twitter-label"
            >
              twitterで見る
            </span>
          </a>
        </div>
      </div>
    </li>
  </ul>
  <div
    className="sc-csuQGl itauGB"
  >
    <button
      className="sc-jbKcbu cyXMbz"
      data-e2e-id="UnmuteButton_muted"
      onClick={[Function]}
      type="button"
    >
      <div
        className="sc-hqyNC joPxxB unmute-icon"
      />
      ミュート解除
    </button>
    <button
      className="sc-dNLxif bEQnLd"
      data-e2e-id="ShowTweetsButton_initial"
      onClick={[Function]}
      type="button"
    >
      <div
        className="sc-jqCOkK hloEgk"
      />
      <span
        className="sc-jTzLTM izpxaH"
      >
        ツイートを
      </span>
      チラ見
    </button>
  </div>
</li>
`;

exports[`Storyshots TwApps/molecules/MuterMenu Muter Menu 1`] = `
<div
  className="sc-jhAzac foyByv"
  data-e2e-id="MuterMenu_opened"
>
  <div
    className="sc-fjdhpX dKWwgc"
  >
    <button
      className="sc-cSHVUG bhxyBA"
      data-e2e-id="ToggleMuterMenuButton_opened"
      onClick={[Function]}
    >
      <img
        alt="close"
        className="sc-jzJRlG ikrnlm menu-toggle-icon"
        src="[object Object]"
      />
    </button>
  </div>
  <button
    className="sc-fBuWsC fizzvv"
  >
    <span
      className="tweets-count"
    >
      3
    </span>
  </button>
</div>
`;

exports[`Storyshots TwApps/molecules/TweetList Tweet List 1`] = `
<ul
  className="sc-jlyJG iymBjZ"
  data-e2e-id="TweetList_opened"
>
  <li
    className="sc-iRbamj blSEcj"
  >
    <div
      className="sc-chPdSV bqfxdD"
    >
      <p
        className="sc-kgoBCf eKLFlP"
      >
        私が日光アレルギー無くて男だったら絶対海軍入ってた
潜水艦乗りたかった
      </p>
      <ul
        className="sc-kGXeez fxkIlE"
      />
      <div
        className="sc-ckVGcZ bBDcYB"
      >
        <div
          className="sc-jKJlTe dPCXzM"
        >
          <div
            className="sc-hMqMXs bzaPGE"
          />
          <p
            className="sc-kEYyzF gplWHF"
          >
            2
          </p>
        </div>
        <div
          className="sc-jKJlTe dPCXzM"
        >
          <div
            className="sc-eNQAEJ gDkQlq"
          />
          <p
            className="sc-kkGfuU bMdBUi"
          >
            0
          </p>
        </div>
        <a
          className="sc-iAyFgw dBJicQ open-twitter-link"
          data-e2e-id="TwitterLink"
          href="http://localhost:6006"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-hSdWYo eHhjMN twitter-icon"
          />
          <span
            className="sc-eHgmQL biXIEI pc-twitter-label"
          >
            twitterで見る
          </span>
        </a>
      </div>
    </div>
  </li>
  <li
    className="sc-iRbamj blSEcj"
  >
    <div
      className="sc-chPdSV bqfxdD"
    >
      <p
        className="sc-kgoBCf eKLFlP"
      >
        ツイートのテスト文章です
      </p>
      <ul
        className="sc-kGXeez fxkIlE"
      />
      <div
        className="sc-ckVGcZ bBDcYB"
      >
        <div
          className="sc-jKJlTe dPCXzM"
        >
          <div
            className="sc-hMqMXs bzaPGE"
          />
          <p
            className="sc-kEYyzF gplWHF"
          >
            2
          </p>
        </div>
        <div
          className="sc-jKJlTe dPCXzM"
        >
          <div
            className="sc-eNQAEJ gDkQlq"
          />
          <p
            className="sc-kkGfuU bMdBUi"
          >
            0
          </p>
        </div>
        <a
          className="sc-iAyFgw dBJicQ open-twitter-link"
          data-e2e-id="TwitterLink"
          href="http://localhost:6006"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-hSdWYo eHhjMN twitter-icon"
          />
          <span
            className="sc-eHgmQL biXIEI pc-twitter-label"
          >
            twitterで見る
          </span>
        </a>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots TwApps/molecules/UserList User List 1`] = `
Array [
  <h2
    className="sc-fMiknA ihxluJ"
  >
    あなたがミュートしているユーザー
  </h2>,
  <ul
    className="sc-dVhcbM SlWHB"
  >
    <li
      className="sc-gipzik kHoOKC"
      data-e2e-id="ListedUser"
      data-user="culalaTP"
    >
      <div
        className="sc-uJMKN cLqoWz"
      >
        <img
          alt="icon"
          className="sc-Rmtcm cHQIgs"
          src="https://pbs.twimg.com/profile_images/1166011350981545990/VRiZCTi8.jpg"
        />
        <div
          className="sc-bRBYWo hitMDu"
        >
          <p
            className="sc-hzDkRC ddyDQe"
          >
            くらら太郎
          </p>
          <p
            className="sc-hzDkRC ddyDQe"
          >
            @
            culalaTP
          </p>
        </div>
        <button
          className="sc-jnlKLf hyQzfV"
          data-e2e-id="UnmuteButton_muted"
          onClick={[Function]}
          type="button"
        >
          <div
            className="sc-bbmXgH cIGXEi unmute-icon"
          />
          ミュート解除
        </button>
      </div>
      <ul
        className="sc-jlyJG cbQYIm"
        data-e2e-id="TweetList_initial"
      >
        <li
          className="sc-iRbamj blSEcj"
        >
          <div
            className="sc-chPdSV bqfxdD"
          >
            <p
              className="sc-kgoBCf eKLFlP"
            >
              私が日光アレルギー無くて男だったら絶対海軍入ってた
潜水艦乗りたかった
            </p>
            <ul
              className="sc-kGXeez fxkIlE"
            />
            <div
              className="sc-ckVGcZ bBDcYB"
            >
              <div
                className="sc-jKJlTe dPCXzM"
              >
                <div
                  className="sc-hMqMXs bzaPGE"
                />
                <p
                  className="sc-kEYyzF gplWHF"
                >
                  2
                </p>
              </div>
              <div
                className="sc-jKJlTe dPCXzM"
              >
                <div
                  className="sc-eNQAEJ gDkQlq"
                />
                <p
                  className="sc-kkGfuU bMdBUi"
                >
                  0
                </p>
              </div>
              <a
                className="sc-iAyFgw dBJicQ open-twitter-link"
                data-e2e-id="TwitterLink"
                href="https://twitter.com/801"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  className="sc-hSdWYo eHhjMN twitter-icon"
                />
                <span
                  className="sc-eHgmQL biXIEI pc-twitter-label"
                >
                  twitterで見る
                </span>
              </a>
            </div>
          </div>
        </li>
        <li
          className="sc-iRbamj blSEcj"
        >
          <div
            className="sc-chPdSV bqfxdD"
          >
            <p
              className="sc-kgoBCf eKLFlP"
            >
              テストツイートです
            </p>
            <ul
              className="sc-kGXeez fxkIlE"
            />
            <div
              className="sc-ckVGcZ bBDcYB"
            >
              <div
                className="sc-jKJlTe dPCXzM"
              >
                <div
                  className="sc-hMqMXs bzaPGE"
                />
                <p
                  className="sc-kEYyzF gplWHF"
                >
                  2
                </p>
              </div>
              <div
                className="sc-jKJlTe dPCXzM"
              >
                <div
                  className="sc-eNQAEJ gDkQlq"
                />
                <p
                  className="sc-kkGfuU bMdBUi"
                >
                  0
                </p>
              </div>
              <a
                className="sc-iAyFgw dBJicQ open-twitter-link"
                data-e2e-id="TwitterLink"
                href="https://twitter.com/772801"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  className="sc-hSdWYo eHhjMN twitter-icon"
                />
                <span
                  className="sc-eHgmQL biXIEI pc-twitter-label"
                >
                  twitterで見る
                </span>
              </a>
            </div>
          </div>
        </li>
      </ul>
      <div
        className="sc-csuQGl itauGB"
      >
        <button
          className="sc-tilXH VdVzC"
          data-e2e-id="UnmuteButton_muted"
          onClick={[Function]}
          type="button"
        >
          <div
            className="sc-fYxtnH ZauVy unmute-icon"
          />
          ミュート解除
        </button>
        <button
          className="sc-hEsumM cNlKWd"
          data-e2e-id="ShowTweetsButton_initial"
          onClick={[Function]}
          type="button"
        >
          <div
            className="sc-ktHwxA guyXOf"
          />
          <span
            className="sc-jTzLTM izpxaH"
          >
            ツイートを
          </span>
          チラ見
        </button>
      </div>
    </li>
  </ul>,
]
`;

exports[`Storyshots TwApps/organisms/TwAppsHeader Tw Apps Header 1`] = `
<header
  className="sc-fAjcbJ fYbnUC"
>
  <img
    alt="icon"
    className="sc-eqIVtm cZgujS"
    src="https://pbs.twimg.com/profile_images/1058576678081851392/LdKwoFXJ.jpg"
  />
</header>
`;
